Fixed collapsing layout

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,7 +14,7 @@
     top:0;
 }
 @media (min-width: 319px)
-and(max-width: 427px)and(min-height: 555px){
+and(max-width: 427px){
     /* General Layout */
     *{
         box-sizing: border-box;
